# gobbledegook

./: .gitignore  CMakeLists.txt
include/: Gobbledegook.h
src/: Gobbledegook.cpp  Server.cpp  Server.h
